# Acendly.ai

./: README.md  package.json
ReportAndPPT/: AcendlyPPT.pptx
SourceCode/: package.json
SourceCode/coordinator/: coordinator.http
SourceCode/coordinator/Constants/: ControllerRouteCON.cs
SourceCode/coordinator/Controllers/: ASTController.cs
SourceCode/scripts/: dev-open.sh  tech_overview.py
SourceCode/semantic_summarizer/: Cargo.toml  sample.ts
SourceCode/semantic_summarizer/src/: config.xml  main.rs
SourceCode/semantic_summarizer/src/constants/: ast_const.rs  mod.rs  server_const.rs
SourceCode/semantic_summarizer/src/controllers/: ast_controller.rs  mod.rs
SourceCode/semantic_summarizer/src/helpers/: ASTServiceHelper.rs  mod.rs
SourceCode/semantic_summarizer/src/models/request/: AstParseRequest.rs  mod.rs
SourceCode/semantic_summarizer/src/models/response/: AstChunk.rs  AstNode.rs  AstParseResponse.rs  BaseResponse.rs  mod.rs
SourceCode/semantic_summarizer/src/services/: ast_service.rs
SourceCode/user_interface/: README.md  pubspec.yaml
coordinator/Services/: AstService.cs
scripts/: dev-open.sh  dev-secrets.sh
semantic_summarizer/: Cargo.toml  sample.ts
semantic_summarizer/src/: abstract_syntax_tree.rs  main.rs  summarizer.rs
vector_embedder/: main.py  requirements.txt
vector_embedder/constants/: EmbeddingCON.py
vector_embedder/controllers/: AIController.py  EmbeddingController.py
vector_embedder/database/: AlchemyEngineStore.py
vector_embedder/services/: EmbeddingService.py
vector_embedder/stores/: RootApplicationStore.py
(+27 files in other folders)
