[package]
name = "semantic_summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
